--- a/template/overview/data.html
+++ b/template/overview/data.html
@@ -44,5 +44,11 @@
       </div>
       <div class="second"></div>
       <div class="third"></div>
-    </div>
 </div>
+<p class="input-group">
+    <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="dateTime" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open();"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+</p>
+<!--<iframe src="http://www.baidu.com"></iframe>-->
